# iced_palace

./: Cargo.toml  README.md
examples/diffused_text/: Cargo.toml
examples/diffused_text/src/: main.rs
examples/dynamic_text/: Cargo.toml
examples/dynamic_text/src/: main.rs
examples/ellipsized_text/: Cargo.toml
examples/ellipsized_text/src/: main.rs
examples/node_editor/: Cargo.toml
examples/node_editor/src/: main.rs
examples/typewriter/: Cargo.toml
examples/typewriter/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  widget.rs
src/widget/: diffused_text.rs  dynamic_text.rs  ellipsized_text.rs  node_editor.rs  typewriter.rs
